Fixed bug that made error messages overflow

--- a/src/App.css
+++ b/src/App.css
@@ -437,7 +437,8 @@ left:0;
     width:80vw;
   }
   .error-message, .warning, .note{
-    width:45vw;
+    width:90%;
+    margin:0 auto;
   }
   .popup-content{
     width:60%;
